force-app/main/default/objects/Media_Outreach__c/Media_Outreach__c.object-meta.xml
<CustomObject>
    <description>To provides the ability to support PI team members requesting assistance with site recruitment activities, such as placing an advertising orders and viewing the status of their previous and current requests.</description>
    <label>Media Outreach</label>
    <nameField>
        <displayFormat>RQ-{000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Outreachs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>