force-app/main/default/objects/Media_Outreach__c/fields/Alternate_Email_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Phone_Number__c</fullName>
    <label>Alternate Email/Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>