force-app/main/default/objects/Media_Outreach__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <label>Study Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>