force-app/main/default/objects/Media_Outreach__c/fields/fMediaType__c.field-meta.xml
<CustomField>
    <fullName>fMediaType__c</fullName>
    <formula>LEFT(IF(INCLUDES( Media_Type__c , &quot;Radio&quot;), $Label.MO_RTL_Radio +&quot;, &quot;, NULL)   + 
IF(INCLUDES( Media_Type__c , &quot;Television&quot;), $Label.MO_Television + &quot;, &quot;, NULL)   + 
IF(INCLUDES( Media_Type__c , &quot;Print&quot;),  $Label.MO_Print  +&quot;, &quot; , NULL)  + 
IF(INCLUDES( Media_Type__c , &quot;Social Media&quot;),  $Label.MO_Social_Media  +&quot;, &quot;,NULL ),(LEN(IF(INCLUDES( Media_Type__c , $Label.MO_RTL_Radio), &quot;Radio&quot; +&quot;, &quot;, NULL)   + 
IF(INCLUDES( Media_Type__c , &quot;Television&quot;), $Label.MO_Television + &quot;, &quot;, NULL)   + 
IF(INCLUDES( Media_Type__c , &quot;Print&quot;),  $Label.MO_Print  +&quot;, &quot; , NULL)  + 
IF(INCLUDES( Media_Type__c , &quot;Social Media&quot;), $Label.MO_Social_Media +&quot;, &quot;,NULL )) - 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fMediaType</label>
    <type>Text</type>
</CustomField>