force-app/main/default/objects/Media_Outreach__c/fields/Preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact_method__c</fullName>
    <label>Preferred Contact Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>