force-app/main/default/objects/Media_Outreach__c/fields/Requested_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_End_Date__c</fullName>
    <label>Requested End Date</label>
    <type>Date</type>
</CustomField>