force-app/main/default/objects/Media_Outreach__c/fields/Study_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the study Name.</description>
    <label>Study Site</label>
    <referenceTo>Study_Site__c</referenceTo>
    <relationshipLabel>Media Outreachs</relationshipLabel>
    <relationshipName>Media_Outreachs</relationshipName>
    <type>Lookup</type>
</CustomField>