force-app/main/default/objects/Media_Outreach__c/fields/Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Study_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Media Outreachs</relationshipLabel>
    <relationshipName>Media_Outreachs</relationshipName>
    <type>Lookup</type>
</CustomField>