force-app/main/default/objects/Media_Outreach__c/validationRules/End_date_Mandatory_status_is_fulfilled.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_Mandatory_status_is_fulfilled</fullName>
    <active>true</active>
    <description>End date is Mandarory status is fulfilled.</description>
    <errorConditionFormula>AND(
   ISBLANK(Requested_End_Date__c),
   ISPICKVAL(Status__c, &quot;Fulfilled&quot;)
   )</errorConditionFormula>
    <errorMessage>Requested End Date mandatory.</errorMessage>
</ValidationRule>